# rust_introduction

actix_rust_api/: Cargo.toml
actix_rust_api/src/: main.rs
chat_app/server/: cargo.toml
clap_intro/: Cargo.toml  diesel.toml
clap_intro/src/: args.rs  db.rs  main.rs  models.rs  schema.rs
clap_two/: Cargo.toml
clap_two/src/: args.rs  main.rs
cli_app/: Cargo.toml
cli_app/src/: main.rs
cli_news/: Cargo.toml
cli_news/src/: lib.rs
dayeight/: Cargo.toml
dayeight/src/: main.rs
dayeleven/src/: lib.rs
dayfive/: .gitignore
dayfive/src/: main.rs
dayfour/src/: main.rs
dayfourteen/src/: main.rs
daynine/: Cargo.toml
daynine/src/: main.rs
dayseven/: Cargo.toml
dayseven/src/: main.rs
daysix/src/: main.rs
dayten/src/: main.rs
daythirteen/: Cargo.toml
daythirteen/src/: main.rs
daythree/src/: main.rs
daytwelve/: Cargo.toml  hey.txt
daytwelve/src/: lib.rs  main.rs
daytwo/: Cargo.toml
daytwo/src/: main.rs
diesel/: Cargo.toml
diesel/migrations/2022-08-16-001928_videos/: up.sql
diesel/src/: args.rs  db.rs  main.rs  models.rs  ops.rs  schema.rs
diesel/src/ops/: video_ops.rs
diesel_two/: .env  Cargo.toml
diesel_two/src/: lib.rs  (+1 more)
disel_three/: Cargo.toml
error handling/: hello.txt
pj_one/: Cargo.toml
practice/: Cargo.toml
project/: Cargo.toml
reqwest/: Cargo.toml
reqwest_two/: Cargo.toml
rust_api/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/api/: task.rs
server/src/model/: task.rs
server/src/repository/: pdb.rs
sqlx/: .env  Cargo.toml
yew_app/: Cargo.toml  index.html  style.css
(+34 files in other folders)
