[package]
name = "cli_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
tokio = { version="1", features = ["full"] }
colour = "0.6.0"
thiserror = "1.0.32"
termimad = "0.20.2"
