[package]
name = "diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","chrono"] }
dotenv = "0.15.0"
chrono = "0.4.22"
clap = {version="3.2.17", features=["derive"]}
