[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
actix-web = "4"
serde =  { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0"
structopt = "0.3.26"
futures = "0.3"
strum = {version="0.24", features=["derive"]}
uuid = "1.1.2"
